log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Wed 29 Mar 2023 02:46:44 AM UTC: 
 tests:  0|6
total_score: 0/70
82fcac8
Wed 29 Mar 2023 02:48:29 AM UTC: 
 arraylist.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:40: error: expected ‘)’ before ‘;’ token
   16 |     if(lista == NULL) exit(EXIT_FAILURE;
      |                           ~            ^
arraylist.c:20:18: error: expected ‘;’ before ‘}’ token
   20 |     return lista;
      |                  ^
      |                  ;
   21 | }
      | ~                 
arraylist.c:21:1: error: control reaches end of non-void function [-Werror=return-type]
   21 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
20bfb86
Wed 29 Mar 2023 02:48:49 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
43a7ba1
Wed 29 Mar 2023 02:50:05 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
d87a8c3
Wed 29 Mar 2023 02:50:15 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
9e500ab
Wed 29 Mar 2023 02:52:13 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
dd300a1
Wed 29 Mar 2023 02:58:59 AM UTC: 
 arraylist.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:27: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   24 |     if (l == NULL) return NULL;
      |                           ^~~~
arraylist.c:23:6: note: declared here
   23 | void append(ArrayList * l, void * data){
      |      ^~~~~~
arraylist.c:29:28: error: dereferencing ‘void *’ pointer [-Werror]
   29 |     l->data[l->capacity] = *data;
      |                            ^~~~~
arraylist.c:29:26: error: void value not ignored as it ought to be
   29 |     l->data[l->capacity] = *data;
      |                          ^
cc1: all warnings being treated as errors
Compilation failed
017e02a
Wed 29 Mar 2023 02:59:10 AM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:28:28: error: dereferencing ‘void *’ pointer [-Werror]
   28 |     l->data[l->capacity] = *data;
      |                            ^~~~~
arraylist.c:28:26: error: void value not ignored as it ought to be
   28 |     l->data[l->capacity] = *data;
      |                          ^
cc1: all warnings being treated as errors
Compilation failed
6798674
Wed 29 Mar 2023 02:59:59 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7791d77
Wed 29 Mar 2023 03:00:14 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:28:28: error: dereferencing ‘void *’ pointer [-Werror]
   28 |     l->data[l->capacity] = *(void *)data;
      |                            ^~~~~~~~~~~~~
arraylist.c:28:26: error: void value not ignored as it ought to be
   28 |     l->data[l->capacity] = *(void *)data;
      |                          ^
cc1: all warnings being treated as errors
Compilation failed
f6de17c
Wed 29 Mar 2023 03:00:20 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bf5b642
Wed 29 Mar 2023 03:00:32 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
b53ba17
Wed 29 Mar 2023 03:00:46 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b1f1522
Wed 29 Mar 2023 03:01:18 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f5bcfb5
Wed 29 Mar 2023 03:01:48 AM UTC: 
 arraylist.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 20/70
a17f511
Wed 29 Mar 2023 03:09:11 AM UTC: 
 arraylist.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:42:34: error: expected ‘;’ before ‘}’ token
   42 |         l->data[j+1] = l->data[j]
      |                                  ^
      |                                  ;
   43 |       }
      |       ~                           
Compilation failed
1fdb0a1
Wed 29 Mar 2023 03:09:18 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
352f87e
Wed 29 Mar 2023 03:09:40 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b2b8c44
Wed 29 Mar 2023 03:09:59 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
87d55c7
Wed 29 Mar 2023 03:10:45 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
070b13e
Wed 29 Mar 2023 03:13:16 AM UTC: 
 arraylist.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
1b44758
Wed 29 Mar 2023 03:13:55 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
79e4708
Wed 29 Mar 2023 03:14:19 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6aab15f
Wed 29 Mar 2023 03:16:21 AM UTC: 
 arraylist.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  5|3
total_score: 30/70
18867a1
Wed 29 Mar 2023 03:22:39 AM UTC: 
 arraylist.c | 16 ++++++++++------
 1 file changed, 10 insertions(+), 6 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:62:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   62 |     return;
      |     ^~~~~~
arraylist.c:61:7: note: declared here
   61 | void* pop(ArrayList * l, int i){
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
4f30ff2
Wed 29 Mar 2023 03:22:59 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 30/70
63fa3f0
Wed 29 Mar 2023 03:24:18 AM UTC: 
 arraylist.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|3
total_score: 30/70
cff2eef
Wed 29 Mar 2023 03:25:24 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|2
total_score: 40/70
ded942a
Wed 29 Mar 2023 03:27:24 AM UTC: 
 arraylist.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  8|2
total_score: 40/70
2d9fa72
